# Flows

./: .gitignore  LICENSE  README.md  index.css  index.html  package.json
.github/workflows/: build.yml
src/: App.tsx  AppUsageComponent.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_management.rs  main.rs  sys_monitor.rs  utils.rs
